unpackaged/objects/Master_Data_Management__c.object
<CustomObject>
  <fields>
    <fullName>Company_code__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Data_Source__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>610</fullName>
        </value>
        <value>
          <fullName>611</fullName>
        </value>
        <value>
          <fullName>174</fullName>
        </value>
        <value>
          <fullName>550</fullName>
        </value>
        <value>
          <fullName>116</fullName>
        </value>
        <value>
          <fullName>150</fullName>
        </value>
        <value>
          <fullName>178</fullName>
        </value>
        <value>
          <fullName>047</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>NZ</fullName>
        </value>
        <value>
          <fullName>NL</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>ES</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>US</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>SE</fullName>
        </value>
        <value>
          <fullName>NO</fullName>
        </value>
        <value>
          <fullName>DK</fullName>
        </value>
        <value>
          <fullName>FI</fullName>
        </value>
        <value>
          <fullName>PL</fullName>
        </value>
        <value>
          <fullName>RU</fullName>
        </value>
        <value>
          <fullName>GB</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>AX</fullName>
        </value>
        <value>
          <fullName>M3</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Master_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Data Management</relationshipLabel>
    <relationshipName>Master_Data_Management</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Master_Id_OneSF_Id__c</fullName>
    <label>Master Id (OneSF Id)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Non_Master_Account_OneSFId__c</fullName>
    <formula>Non_Master_Account__r.OneSF_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Master Account (OneSFId)</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Non_Master_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Master Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Data Management (Non-Master Account)</relationshipLabel>
    <relationshipName>Master_Data_Management1</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Non_Master_Id__c</fullName>
    <description>Exactly as it appears in the GDW</description>
    <externalId>true</externalId>
    <label>Non-Master Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Preserved_Child_Record_ID_and_Name__c</fullName>
    <label>Preserved Child Record ID and Name</label>
    <length>200</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Active</fullName>
        </value>
        <value>
          <fullName>Inactive</fullName>
        </value>
        <value>
          <fullName>Created</fullName>
        </value>
        <value>
          <fullName>Submitted</fullName>
        </value>
        <value>
          <fullName>Approved</fullName>
        </value>
        <value>
          <fullName>Rejected</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Master Data Management</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Master_Id_OneSF_Id__c</columns>
    <columns>Non_Master_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>Master_Data_Merges_Approved</fullName>
    <columns>NAME</columns>
    <columns>Master_Customer_Name__c</columns>
    <columns>Master_Id_OneSF_Id__c</columns>
    <columns>Preserved_Child_Record_ID_and_Name__c</columns>
    <columns>Non_Master_Account__c</columns>
    <columns>Non_Master_Account_OneSFId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Approved</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Master_Data_Management__c.Merge_Requests</value>
    </filters>
    <label>Master Data Merges - Approved</label>
    <language>en_US</language>
    <sharedTo>
      <role>DNA_Shared_Services</role>
      <role>NA_CRM_Analyst</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Master_Data_Merges_Completed</fullName>
    <columns>NAME</columns>
    <columns>Master_Customer_Name__c</columns>
    <columns>Non_Master_Account__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Status__c</field>
      <operation>equals</operation>
      <value>Completed</value>
    </filters>
    <filters>
      <field>RECORDTYPE</field>
      <operation>equals</operation>
      <value>Master_Data_Management__c.Merge_Requests</value>
    </filters>
    <label>Master Data Merges - Completed</label>
    <language>en_US</language>
    <sharedTo>
      <role>DNA_Shared_Services</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>US_RCO_Sales_Ops_Master_Data_Management</fullName>
    <columns>NAME</columns>
    <columns>Master_Customer_Name__c</columns>
    <columns>Master_Id_OneSF_Id__c</columns>
    <columns>Non_Master_Account__c</columns>
    <columns>Non_Master_Account_OneSFId__c</columns>
    <columns>Status__c</columns>
    <columns>Preserved_Child_Record_ID_and_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>US: RCO Sales Ops</label>
    <language>en_US</language>
    <queue>US_RCO_Sales_Ops</queue>
    <sharedTo>
      <allInternalUsers></allInternalUsers>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>specific_non_master_ID</fullName>
    <columns>NAME</columns>
    <columns>Master_Id_OneSF_Id__c</columns>
    <columns>Non_Master_Id__c</columns>
    <columns>Status__c</columns>
    <columns>Master_Customer_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Non_Master_Id__c</field>
      <operation>startsWith</operation>
      <value>FR313480,FR312480</value>
    </filters>
    <label>specific non-master ID</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <displayFormat>MDM{000000000}</displayFormat>
    <label>MDM Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Master Data Management</pluralLabel>
  <recordTypes>
    <active>true</active>
    <fullName>Master_Data_Management</fullName>
    <label>Master Data Management</label>
  </recordTypes>
  <recordTypes>
    <active>true</active>
    <description>Used to identify Account Records that need to be merged</description>
    <fullName>Merge_Requests</fullName>
    <label>Merge Requests</label>
  </recordTypes>
  <sharingModel>Private</sharingModel>
</CustomObject>